[package]
name = "das-ops"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "das-ops"

[dependencies]
anchor-client = { workspace = true }
anyhow = { workspace = true }
borsh = { workspace = true }
bs58 = { workspace = true }
cadence = { workspace = true }
cadence-macros = { workspace = true }
clap = { workspace = true, features = ["derive", "cargo", "env"] }
das-bubblegum = { workspace = true }
das-core = { workspace = true }
digital_asset_types = { workspace = true }
env_logger = { workspace = true }
figment = { workspace = true }
futures = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
mpl-bubblegum = { workspace = true }
program_transformers = { workspace = true }
sea-orm = { workspace = true }
solana-account-decoder = { workspace = true }
solana-client = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
spl-account-compression = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
mpl-token-metadata = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
