[package]
name = "program_transformers"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }

[dependencies]
blockbuster = { workspace = true }
bs58 = { workspace = true }
cadence = { workspace = true }
cadence-macros = { workspace = true }
das-core = { workspace = true }
digital_asset_types = { workspace = true, features = [
  "json_types",
  "sql_types",
] }
futures = { workspace = true }
heck = { workspace = true }
mpl-bubblegum = { workspace = true }
num-traits = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
spl-account-compression = { workspace = true, features = ["no-entrypoint"] }
spl-token = { workspace = true, features = ["no-entrypoint"] }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }

[lints]
workspace = true
