[package]
name = "blockbuster"
description = "Metaplex canonical program parsers, for indexing, analytics etc...."
version = "2.3.0"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/blockbuster"
license = "AGPL-3.0"
edition = "2021"
readme = "../README.md"

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
spl-token-2022 = { version = "1.0", features = ["no-entrypoint"] }
spl-account-compression = { git = "https://github.com/StanChe/solana-program-library.git", branch = "feature/init_with_root", features = ["no-entrypoint"] }
spl-noop = { git = "https://github.com/StanChe/solana-program-library.git", branch = "feature/init_with_root", features = ["no-entrypoint"] }
mpl-bubblegum = { workspace = true }
mpl-core = { git = "https://github.com/RequescoS/mpl-core.git", features = ["serde"] }
mpl-token-metadata = { version = "4.1.1", features = ["serde"] }
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
async-trait = "0.1.57"
bs58 = "0.4.0"
lazy_static = "1.4.0"
borsh = "~0.10.3"
thiserror = "1.0.63"
log = "0.4.17"
solana-sdk = "~1.18.11"
solana-transaction-status = "~1.18.11"
spl-token-metadata-interface = "0.2.0"
spl-token-group-interface = "0.1.0"
spl-pod = { version = "0.1.0", features = ["serde-traits"] }
serde = "1.0.140"
solana-zk-token-sdk = "~1.18.11"
anchor-lang = { version = "0.29.0" }

[dev-dependencies]
flatbuffers = "23.1.21"
plerkle_serialization = { git = "https://github.com/n00m4d/digital-asset-validator-plugin.git" }
rand = "0.8.5"
serde_json = "1.0.89"
solana-client = "~1.18.11"
solana-geyser-plugin-interface = "~1.18.11"
spl-concurrent-merkle-tree = "0.2.0"
