[workspace]
resolver = "2"
members = [
  "digital_asset_types",
  "migration",
]

[workspace.package]
version = "0.7.2"
edition = "2021"
repository = "https://github.com/metaplex-foundation/digital-asset-rpc-infrastructure"
publish = false

[workspace.dependencies]
async-std = "1.0.0"
digital_asset_types = { path = "digital_asset_types" }
enum-iterator = "1.2.0"
enum-iterator-derive = "1.1.0"
sea-orm-migration = "0.10.6"


async-trait = "0.1.60"
blockbuster = { version = "0.9.0-beta.5", git = "https://github.com/Honeycomb-Protocol/blockbuster.git", branch = "beta" }
bs58 = "0.4.0"
futures = "0.3.28"
indexmap = "1.9.3"
jsonpath_lib = "0.3.0"
log = "0.4.17"
mime_guess = "2.0.4"
num-derive = "0.3.3"
num-traits = "0.2.15"
schemars = "0.8.6"
schemars_derive = "0.8.6"
sea-orm = "0.10.6"
sea-query = "0.28.1"
serde = "1.0.137"
serde_json = "1.0.81"
solana-sdk = "~1.16.16"
spl-concurrent-merkle-tree = "0.2.0"
thiserror = "1.0.31"
tokio = "1.30.0"
url = "2.3.1"



[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"

[profile.release]
lto = true
codegen-units = 1
