[workspace]
resolver = "2"
members = [
  "metaplex-rpc-proxy",
]

[workspace.package]
version = "0.7.2"
edition = "2021"
repository = "https://github.com/metaplex-foundation/digital-asset-rpc-infrastructure"
publish = false

[workspace.dependencies]
lazy_static = "1.4.0"
log = "0.4.17"
proxy-wasm = "0.2.0"
regex = "1.6.0"
wasi = "0.7.0"
wasm-bindgen = "0.2.83"


[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"

[profile.release]
lto = true
codegen-units = 1
