[package]
name = "acc_forwarder"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.4", features = ["derive"] }
figment = "0.10.8"
flatbuffers = "23.1.21"
futures = "0.3.28"
mpl-token-metadata = "1.8.3"
plerkle_messenger = { version = "1.5.2", features = ["redis"] }
plerkle_serialization = "1.5.2"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.81"
solana-client = "=1.14.15"
solana-sdk = "=1.14.15"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
txn_forwarder = { path = "../txn_forwarder" }
