[package]
name = "bgtask_creator"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.1.4", features = ["derive", "cargo"] }
digital_asset_types = { path = "../../digital_asset_types", features = ["json_types", "sql_types"] }
futures = "0.3.25"
log = "0.4.17"
nft_ingester = { path = "../../nft_ingester" }
sea-orm = { version = "0.10.6", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres", "with-chrono", "mock"] }
sqlx = { version = "0.6.2", features = ["macros", "runtime-tokio-rustls", "postgres", "uuid", "offline", "json"] }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
