[package]
name = "e2e"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1"
solana-sdk = "1"
tokio = "1"
digital_asset_types = { path = "../../digital_asset_types" }
spl-token = "3.2"
indicatif = "0.17.2"