[package]
name = "load_generation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "1.14.3"
tokio = { version = "1.21.2", features = ["full"] }
solana-client = "1.14.3"
mpl-token-metadata = { version = "1.4.1", features = ["no-entrypoint"] }
spl-token = "3.5.0"
solana-program = "1.14.3"
spl-associated-token-account = "1.1.1"
rand = "0.8.5"
fake = "2.5.0"
