[package]
name = "tree-status"
version = "0.1.0"
authors = ["Triton One"]
edition = "2021"
description = "Test state of the sprcified tree"

[dependencies]
anyhow = "1.0.70"
borsh = "0.9.1"
clap = { version = "4.1.4", features = ["derive"] }
flatbuffers = "23.1.21"
mpl-bubblegum = "0.7.0"
plerkle_messenger = { version = "1.5.0", features = ["redis"] }
plerkle_serialization = { version = "1.5.0" }
solana-client = { version = "=1.14.15"}
solana-sdk = { version = "=1.14.15"}
solana-transaction-status = { version = "=1.14.15"}
spl-account-compression = "0.1.8"
spl-concurrent-merkle-tree = "0.1.3"
tokio = { version = "1.23.0", features = ["full", "tracing"] }
sqlx = { version = "0.6.2", features = ["macros", "runtime-tokio-rustls", "postgres", "uuid", "offline", "json"] }
sea-orm = { version = "0.10.6", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres", "with-chrono", "mock"] }
sea-query = { version = "0.28.1", features = ["postgres-array"] }
nft_ingester = { path = "../../nft_ingester" }
digital_asset_types = { path = "../../digital_asset_types", features = ["json_types", "sql_types"] }
hex = "0.4.3"
