[package]
name = "txn_forwarder"
version = "0.6.9"
edition = "2021"

[dependencies]
redis = { version = "0.22.3", features = ["aio", "tokio-comp", "streams", "tokio-native-tls-comp"] }
futures = {version = "0.3.25"}
futures-util = "0.3.0"
base64 = "0.20.0"
thiserror = "1.0.31"
serde_json = "1.0.81"
tokio = { version = "1.23.0", features = ["full", "tracing"] }
plerkle_messenger = { version = "1.5.0", features = ['redis'] }
plerkle_serialization = { version = "1.5.0" }
flatbuffers = "23.1.21"
clap = { version = "4.1.4", features = ["derive"] }
solana-client = { version = "=1.14.15"}
solana-sdk = { version = "=1.14.15"}
solana-transaction-status = { version = "=1.14.15"}
figment = { version = "0.10.8" }
bs58 = "0.4.0"
tokio-stream = "0.1.11"
async-recursion = "1.0.4"
spl-account-compression = { version = "0.1.10", features=["no-entrypoint"]}
spl-concurrent-merkle-tree = {version="0.1.3" }
spl-noop = { version ="0.1.3", features=["no-entrypoint"]}
borsh = "0.10.3"
anchor-client = "0.26.0"
