[package]
name = "txn_forwarder"
version = "0.6.9"
edition = "2021"
publish = false

[dependencies]
async-recursion = "1.0.4"
clap = { version = "4.1.4", features = ["derive"] }
figment = "0.10.8"
flatbuffers = "23.1.21"
plerkle_messenger = { version = "1.5.0", features = ["redis"] }
plerkle_serialization = "1.5.0"
solana-client = "=1.14.15"
solana-sdk = "=1.14.15"
solana-transaction-status = "=1.14.15"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1.11"
