[package]
name = "txn_forwarder"
version = "0.6.9"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4.1.4", features = ["derive"] }
env_logger = "0.10.0"
figment = "0.10.8"
flatbuffers = "23.1.21"
futures = "0.3.28"
log = "0.4.17"
plerkle_messenger = { version = "1.5.0", features = ["redis"] }
plerkle_serialization = "1.5.0"
solana-client = "=1.14.15"
solana-sdk = "=1.14.15"
solana-transaction-status = "=1.14.15"
thiserror = "1.0.31"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread", "sync", "time", "fs"] }
