[package]
name = "acc_forwarder"
version = "0.7.12"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.70"
bs58 = "0.4.0"
clap = { version = "4.1.4", features = ["derive"] }
env_logger = "0.10.0"
figment = "0.10.8"
flatbuffers = "23.1.21"
futures = "0.3.28"
lazy_static = "1.4.0"
log = "0.4.17"
mpl-token-metadata = "=2.0.0-beta.1"
plerkle_serialization = { version = "1.5.2" }
plerkle_messenger = { version = "1.6.0", features = ['redis'] }
prometheus = "0.13.3"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.81"
solana-account-decoder = "~1.16.16"
solana-client = "~1.16.16"
solana-sdk = "~1.16.16"
solana-transaction-status = "~1.16.16"
spl-token = { version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"] }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread", "time"] }
txn_forwarder = { path = "../txn_forwarder" }
