[package]
name = "acc_forwarder"
version = "0.7.12"
edition = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bs58 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
figment = { workspace = true }
flatbuffers = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
mpl-token-metadata = { workspace = true, features = ["no-entrypoint"]}
plerkle_messenger = { workspace = true, features = ['redis'] }
plerkle_serialization = { workspace = true }
prometheus = { workspace = true }
serde_json = { workspace = true }
solana-account-decoder = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
txn_forwarder = { workspace = true }

[lints]
workspace = true
