[package]
name = "bgtask_creator"
version = "0.7.12"
edition = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "cargo"] }
digital_asset_types = { workspace = true, features = [
  "json_types",
  "sql_types",
] }
futures = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
nft_ingester = { workspace = true }
prometheus = { workspace = true }
sea-orm = { workspace = true, features = [
  "macros",
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "with-chrono",
  "mock",
] }
sea-query = { workspace = true, features = ["postgres-array"] }
solana-sdk = { workspace = true }
sqlx = { workspace = true, features = [
  "macros",
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "offline",
  "json",
] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
txn_forwarder = { workspace = true }

[lints]
workspace = true
